# tetrisand

./: .clang-format  .gitignore  CMakeLists.txt  Makefile.preview  README.md
assets/: 0.ppm  1.ppm  2.ppm  3.ppm  4.ppm  5.ppm  6.ppm  7.ppm  8.ppm  9.ppm  mask1.ppm  mask2.ppm  mask3.ppm  mask4.ppm  mask5.ppm
src/: config.hpp  main.cpp
src-old/: layout.hpp
src-old/gui/: grid.hpp  gui.cpp  texture.hpp
src-old/simulation/: CMakeLists.txt  simulation.hpp
src/graphics/: graphics.cpp
src/graphics/include/: graphics.hpp
src/gui/: CMakeLists.txt  grid.hpp  gui.cpp  gui.hpp  mask.hpp  texture.hpp
src/simulation/: grid.hpp  simulation.cpp  simulation.hpp
